--- a/DM2024-Lab1-Homework.ipynb
+++ b/DM2024-Lab1-Homework.ipynb
@@ -202,6 +202,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualizations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -376,11 +383,226 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TF-IDF"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "comments = train_df['comment'] \n",
+    "\n",
+    "vectorizer = TfidfVectorizer(\n",
+    "    max_features=5000,  # Use the top 5000 words based on TF-IDF scores \n",
+    "    stop_words='english',  \n",
+    "    ngram_range=(1, 1)  \n",
+    ")\n",
+    "\n",
+    "tfidf_matrix = vectorizer.fit_transform(comments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    00  000  045   07   10  100  10m   11  11th   12  ...  youngster  \\\n",
+      "0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   0.0  0.0  ...        0.0   \n",
+      "1  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   0.0  0.0  ...        0.0   \n",
+      "2  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   0.0  0.0  ...        0.0   \n",
+      "3  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   0.0  0.0  ...        0.0   \n",
+      "4  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   0.0  0.0  ...        0.0   \n",
+      "\n",
+      "   youngsters  youth  youthful  youtube  yrs  yuo  yup  zealand  zulus  \n",
+      "0         0.0    0.0       0.0      0.0  0.0  0.0  0.0      0.0    0.0  \n",
+      "1         0.0    0.0       0.0      0.0  0.0  0.0  0.0      0.0    0.0  \n",
+      "2         0.0    0.0       0.0      0.0  0.0  0.0  0.0      0.0    0.0  \n",
+      "3         0.0    0.0       0.0      0.0  0.0  0.0  0.0      0.0    0.0  \n",
+      "4         0.0    0.0       0.0      0.0  0.0  0.0  0.0      0.0    0.0  \n",
+      "\n",
+      "[5 rows x 3485 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tfidf_df = pd.DataFrame(\n",
+    "    tfidf_matrix.toarray(),  \n",
+    "    columns=vectorizer.get_feature_names_out()  \n",
+    ")\n",
+    "\n",
+    "print(tfidf_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['song', 'love', 'memories', 'music', 'time', 'great', 'beautiful',\n",
+       "       'songs', 'years', 'like', 'old', 'good', 'brings', 'just', 'voice',\n",
+       "       'remember', 'days', 'childhood', 'best', 'miss'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_tfidf_scores = tfidf_df.mean(axis=0).sort_values(ascending=False)\n",
+    "mean_tfidf_scores.index[:20]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Naive Bayes Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.naive_bayes import MultinomialNB, ComplementNB\n",
+    "from sklearn.metrics import classification_report, accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Word frequency features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract features and labels\n",
+    "X = train_df['comment']  \n",
+    "y = train_df['sentiment']  \n",
+    "\n",
+    "# Split into train and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultinomialNB with Word Frequency Features\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "    nostalgia       0.74      0.97      0.84       152\n",
+      "not nostalgia       0.95      0.66      0.78       148\n",
+      "\n",
+      "     accuracy                           0.81       300\n",
+      "    macro avg       0.85      0.81      0.81       300\n",
+      " weighted avg       0.85      0.81      0.81       300\n",
+      "\n",
+      "Accuracy: 0.8133333333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create word frequency features\n",
+    "count_vectorizer = CountVectorizer(stop_words='english', max_features=5000)\n",
+    "X_train_count = count_vectorizer.fit_transform(X_train)\n",
+    "X_test_count = count_vectorizer.transform(X_test)\n",
+    "\n",
+    "# Train MultinomialNB\n",
+    "mnb_count = MultinomialNB()\n",
+    "mnb_count.fit(X_train_count, y_train)\n",
+    "\n",
+    "# Predict and evaluate\n",
+    "y_pred_count = mnb_count.predict(X_test_count)\n",
+    "print(\"MultinomialNB with Word Frequency Features\")\n",
+    "print(classification_report(y_test, y_pred_count))\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred_count))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TF-IDF features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ComplementNB with TF-IDF Features\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "    nostalgia       0.73      0.97      0.83       152\n",
+      "not nostalgia       0.95      0.64      0.76       148\n",
+      "\n",
+      "     accuracy                           0.80       300\n",
+      "    macro avg       0.84      0.80      0.80       300\n",
+      " weighted avg       0.84      0.80      0.80       300\n",
+      "\n",
+      "Accuracy: 0.8033333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create TF-IDF features\n",
+    "tfidf_vectorizer = TfidfVectorizer(stop_words='english', max_features=5000)\n",
+    "X_train_tfidf = tfidf_vectorizer.fit_transform(X_train)\n",
+    "X_test_tfidf = tfidf_vectorizer.transform(X_test)\n",
+    "\n",
+    "# Train ComplementNB\n",
+    "cnb_tfidf = ComplementNB()\n",
+    "cnb_tfidf.fit(X_train_tfidf, y_train)\n",
+    "\n",
+    "# Predict and evaluate\n",
+    "y_pred_tfidf = cnb_tfidf.predict(X_test_tfidf)\n",
+    "print(\"ComplementNB with TF-IDF Features\")\n",
+    "print(classification_report(y_test, y_pred_tfidf))\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred_tfidf))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The accuracy with Word Frequency features is better than that with TFIDF features. \n",
+    "\n",
+    "This is possibly because the TFIDF features loses information with common word deletion, and the influence of certain key words such as \"nostalgia\" might be downgraded. Also, the two categories have similar texts, so TFIDF might not be able to distinguish the topics as well. "
+   ]
   },
   {
    "cell_type": "code",
